--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h2>Skills:</h2>
     <ul>
       <li>
-        <em>Communication Skills: &nbsp;&nbsp;</em>
+        <em>Communication Skills &nbsp;&nbsp;</em>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
@@ -60,7 +60,7 @@
       </li>
 
       <li>
-        <em>Problem Solving: &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</em>
+        <em>Problem Solving &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</em>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
@@ -69,7 +69,7 @@
       </li>
 
       <li>
-        <em>Programming: &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</em>
+        <em>Programming &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</em>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
@@ -78,7 +78,7 @@
       </li>
 
       <li>
-        <em>Research: &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</em>
+        <em>Research &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</em>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
