--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
   <body>
     <h1>Abdullah Khan</h1>
     <img src="./me.jpg" alt="Picture of Abdullah " height="190" width="190" />
-    <h2>Summary:</h2>
+    <h2>Summary</h2>
     <p>A hard-working and dedicated individual with curiosity to learn. Currently in my last year of bachelors in Software Engineering with a CGPA of 2.8. Good grip in OOP and Java basic concepts. Looking forward to enhance my career in Web Development and get hands-on experience.</p>
     <hr />
-    <h2>Education:</h2>
+    <h2>Education</h2>
     <ul>
       <li>Matric, Computer Science - Army Burn Hall College For Boys (2014-2016)</li>
       <li>Fsc, Pre-Engineering - Army Burn Hall College For Boys (2016-2018)</li>
       <li>Bachelor in Science, Software Engineering - Comsats University Islamabad, Abbottabad Campus (Currently Enrolled)</li>
     </ul>
     <hr />
-    <h2>Work Experience:</h2>
+    <h2>Work Experience</h2>
     <ul>
       <li><h3>Intern(Call Center Representative) - Centaurus BPO.</h3></li>
       <p>
@@ -48,7 +48,7 @@
       </ul>
     </ul>
     <hr />
-    <h2>Skills:</h2>
+    <h2>Skills</h2>
     <ul>
       <li>
         <em>Communication Skills &nbsp;&nbsp;</em>
@@ -87,7 +87,7 @@
       </li>
     </ul>
     <hr />
-    <h2>Awards/Certifications:</h2>
+    <h2>Awards/Certifications</h2>
     <ul>
       <li>Certificate of Participation - Google Developer Student Club (2021 Coding Seekho Participant)</li>
     </ul>
