--- a/index.html
+++ b/index.html
@@ -98,6 +98,6 @@
       <li><a href="./Contact.html">Contact</a></li>
     </ul>
 
-    <footer>&copy; Abdullah Khan</footer>
+    <footer>Abdullah Khan. Copyright &copy;</footer>
   </body>
 </html>
