--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
   <body>
     <h1>Abdullah Khan</h1>
     <img src="./me.jpg" alt="Picture of Abdullah " height="190" width="190" />
+    <hr />
     <h2>Summary</h2>
     <p>A hard-working and dedicated individual with curiosity to learn. Currently in my last year of bachelors in Software Engineering with a CGPA of 2.8. Good grip in OOP and Java basic concepts. Looking forward to enhance my career in Web Development and get hands-on experience.</p>
-    <hr />
+
     <h2>Education</h2>
     <ul>
       <li>Matric, Computer Science - Army Burn Hall College For Boys (2014-2016)</li>
       <li>Fsc, Pre-Engineering - Army Burn Hall College For Boys (2016-2018)</li>
       <li>Bachelor in Science, Software Engineering - Comsats University Islamabad, Abbottabad Campus (Currently Enrolled)</li>
     </ul>
-    <hr />
+
     <h2>Work Experience</h2>
     <ul>
       <li><h3>Intern(Call Center Representative) - Centaurus BPO.</h3></li>
@@ -47,7 +48,7 @@
         <li>Did this internship during my semester break</li>
       </ul>
     </ul>
-    <hr />
+
     <h2>Skills</h2>
     <ul>
       <li>
@@ -86,18 +87,18 @@
         <span class="fa fa-star"></span>
       </li>
     </ul>
-    <hr />
+
     <h2>Awards/Certifications</h2>
     <ul>
       <li>Certificate of Participation - Google Developer Student Club (2021 Coding Seekho Participant)</li>
     </ul>
-    <hr />
+
     <h2>Other</h2>
     <ul>
       <li><a href="./hobbies.html">Hobbies</a></li>
       <li><a href="./Contact.html">Contact</a></li>
     </ul>
-
-    <footer>Abdullah Khan. Copyright &copy;</footer>
+    <hr />
+    <footer>Copyright &copy; Abdullah Khan</footer>
   </body>
 </html>
