--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
     <h1>Abdullah Khan</h1>
     <img src="./me.jpg" alt="Picture of Abdullah " height="190" width="190" />
     <hr />
-    <h2>Summary</h2>
+    <h2><u>Summary</u></h2>
     <p>A hard-working and dedicated individual with curiosity to learn. Currently in my last year of bachelors in Software Engineering with a CGPA of 2.8. Good grip in OOP and Java basic concepts. Looking forward to enhance my career in Web Development and get hands-on experience.</p>
 
-    <h2>Education</h2>
-    <ul>
-      <li>Matric, Computer Science - Army Burn Hall College For Boys (2014-2016)</li>
-      <li>Fsc, Pre-Engineering - Army Burn Hall College For Boys (2016-2018)</li>
-      <li>Bachelor in Science, Software Engineering - Comsats University Islamabad, Abbottabad Campus (Currently Enrolled)</li>
-    </ul>
+    <h2><u>Education</u></h2>
 
-    <h2>Work Experience</h2>
+    <h3>Army Burn Hall College For Boys (2014-2016)</h3>
+    <p>Matric (Computer Science)</p>
+    <h3>Army Burn Hall College For Boys (2016-2018)</h3>
+    <p>Fsc (Pre-Engineering)</p>
+    <h3>Comsats University Islamabad, Abbottabad Campus</h3>
+    Bachelor of Science (Software Engineering - Currently Enrolled)
+
+    <h2><u>Work Experience</u></h2>
     <ul>
       <li><h3>Intern(Call Center Representative) - Centaurus BPO.</h3></li>
       <p>
@@ -49,7 +51,7 @@
       </ul>
     </ul>
 
-    <h2>Skills</h2>
+    <h2><u>Skills</u></h2>
     <ul>
       <li>
         <em>Communication Skills &nbsp;&nbsp;</em>
@@ -88,12 +90,12 @@
       </li>
     </ul>
 
-    <h2>Awards/Certifications</h2>
+    <h2><u>Awards/Certifications</u></h2>
     <ul>
       <li>Certificate of Participation - Google Developer Student Club (2021 Coding Seekho Participant)</li>
     </ul>
 
-    <h2>Other</h2>
+    <h2><u>Other</u></h2>
     <ul>
       <li><a href="./hobbies.html">Hobbies</a></li>
       <li><a href="./Contact.html">Contact</a></li>
