--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <img src="./me.jpg" alt="Picture of Abdullah " height="190" width="190" />
     <hr />
     <h2><u>Summary</u></h2>
-    <p>A hard-working and dedicated individual with curiosity to learn. Currently in my last year of bachelors in Software Engineering with a CGPA of 2.8. Good grip in OOP and Java basic concepts. Looking forward to enhance my career in Web Development and get hands-on experience.</p>
+    <p>A hard-working and dedicated individual with curiosity to learn. Currently in my last year of Bachelor's in Software Engineering with a CGPA of 2.8. Good grip in OOP and Java basic concepts. Looking forward to enhance my career in Web Development and get hands-on experience.</p>
 
     <h2><u>Education</u></h2>
 
@@ -25,8 +25,8 @@
     <p>Matric (Computer Science)</p>
     <h3>Army Burn Hall College For Boys (2016-2018)</h3>
     <p>Fsc (Pre-Engineering)</p>
-    <h3>Comsats University Islamabad, Abbottabad Campus</h3>
-    Bachelor of Science (Software Engineering - Currently Enrolled)
+    <h3>Comsats University Islamabad, Abbottabad Campus. (Present)</h3>
+    Bachelor of Science (Software Engineering)
 
     <h2><u>Work Experience</u></h2>
     <ul>
