--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p>Matric (Computer Science)</p>
     <h3>Army Burn Hall College For Boys (2016-2018)</h3>
     <p>Fsc (Pre-Engineering)</p>
-    <h3>Comsats University Islamabad, Abbottabad Campus. (Present)</h3>
+    <h3>Comsats University Islamabad, Abbottabad Campus (Present)</h3>
     Bachelor of Science (Software Engineering)
 
     <h2><u>Work Experience</u></h2>
