--- a/index.html
+++ b/index.html
@@ -101,6 +101,6 @@
       <li><a href="./Contact.html">Contact</a></li>
     </ul>
     <hr />
-    <footer>Copyright &copy; Abdullah Khan</footer>
+    <footer>Abdullah Khan - Copyright &copy;</footer>
   </body>
 </html>
