--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="device-width, initial-scale=1.0" />
-    <title>CV</title>
+    <title>Resume</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <style>
       .checked {
@@ -101,6 +101,6 @@
       <li><a href="./Contact.html">Contact</a></li>
     </ul>
     <hr />
-    <footer>Abdullah Khan - Copyright &copy;</footer>
+    <footer>Copyright &copy; Abdullah khan</footer>
   </body>
 </html>
