--- a/Contact.html
+++ b/Contact.html
@@ -1,3 +1,14 @@
+<style>
+  body {
+    margin: 0;
+    font-size: 1.5rem;
+    background-color: #0c0c0c;
+    color: whitesmoke;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+</style>
+
 <h2>Personal Info</h2>
 <h3>Address</h3>
 <p>Abbottabad, Pakistan, 22010</p>
