--- a/hobbies.html
+++ b/hobbies.html
@@ -7,6 +7,10 @@
     padding-left: 30px;
     padding-right: 30px;
   }
+  hr {
+    border: 3px solid whitesmoke;
+    border-radius: 10px;
+  }
 </style>
 
 <h2>My Hobbies</h2>
