--- a/Contact.html
+++ b/Contact.html
@@ -7,6 +7,10 @@
     padding-left: 30px;
     padding-right: 30px;
   }
+  hr {
+    border: 3px solid whitesmoke;
+    border-radius: 10px;
+  }
 </style>
 
 <h2>Personal Info</h2>
