--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
         border: 3px solid whitesmoke;
         border-radius: 10px;
       }
+
+      @media (min-width: 0px) and (max-width: 768px) {
+        body {
+          font-size: 1.2rem;
+        }
+      }
     </style>
   </head>
   <body>
